--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-GEMINI_API_KEY="your gemini api key"
+GEMINI_API_KEY=your_api_key_here
+MONGO_URI=your_mongodb_connection_string_here
+DATABASE_NAME=your_database_name_here
